--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@
           padding:2px;
 
         }
-        #outPut{
+        #outPut , #outPut2{
           font-size: 1.5rem;
           text-align: center;
           background-color: #f1f1f1;
